[workspace]
members = [
    "internal/ruchei-sample",
    "route-sink",
    "ruchei-callback",
    "ruchei-collections",
    "ruchei-extra",
    "ruchei-route",
    "ruchei-test",
    "xtask",
]

[workspace.package]
edition = "2024"
publish = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/parrrate/ruchei"
authors = ["Alisa Feistel <alisafeistel@gmail.com>"]
rust-version = "1.88"

[package]
name = "ruchei"
version = "0.0.98-a.0"
description = "Utilities for working with many streams"
documentation = "https://docs.rs/ruchei"
keywords = ["streams", "async", "stream"]
categories = ["asynchronous"]
readme = "README.md"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[workspace.dependencies]
route-sink = { path = "route-sink", version = "0.1.0" }
ruchei-callback = { path = "ruchei-callback", version = "0.1.1" }
ruchei-collections = { path = "ruchei-collections", version = "=0.0.0-a.0" }
ruchei-extra = { path = "ruchei-extra", version = "0.1.1" }
ruchei-route = { path = "ruchei-route", version = "0.1.8", default-features = false }
ruchei-sample.path = "internal/ruchei-sample"

futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-sink = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.5"
pin-project = "1"
slab = "0.4.9"

[dependencies]
route-sink = { workspace = true, features = ["futures-util", "std"] }
ruchei-callback.workspace = true
ruchei-collections.workspace = true
ruchei-extra.workspace = true

futures-channel.workspace = true
futures-util.workspace = true
linked-hash-map.workspace = true
linked_hash_set.workspace = true
pin-project.workspace = true

[dev-dependencies]
async-io = "2.3.2"
async-net = "2.0.0"
async-std = { version = "1.12.0", features = ["attributes"] }
async-tungstenite = { version = "0.28" }
rand = "0.8.5"
thiserror = "1"
