[workspace]
members = [
    "extend-pinned",
    "internal/ruchei-sample",
    "route-sink",
    "ruchei-callback",
    "ruchei-collections",
    "ruchei-connection",
    "ruchei-extend",
    "ruchei-extra",
    "ruchei-itertools",
    "ruchei-route",
    "ruchei-test",
    "ruchei-wakelist",
    "xtask",
]

[workspace.package]
edition = "2024"
publish = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/parrrate/ruchei"
authors = ["Alisa Feistel <alisafeistel@gmail.com>"]
rust-version = "1.88"

[package]
name = "ruchei"
version = "0.1.2"
description = "Utilities for working with many streams"
documentation = "https://docs.rs/ruchei"
keywords = ["streams", "async", "stream"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
exclude = [
    "/.github",
    "/.vscode",
    "/bin",
    "/.gitattribues",
    "/.gitignore",
    "/check.sh",
    "/doc.sh",
    "/spec",
]

[workspace.dependencies]
extend-pinned = { path = "extend-pinned", version = "0.1.0" }
route-sink = { path = "route-sink", version = "0.1.3" }
ruchei-callback = { path = "ruchei-callback", version = "0.1.2" }
ruchei-collections = { path = "ruchei-collections", version = "=0.0.0-a.5" }
ruchei-connection = { path = "ruchei-connection", version = "=0.0.0-a.3" }
ruchei-extend = { path = "ruchei-extend", version = "0.1.2" }
ruchei-extra = { path = "ruchei-extra", version = "0.1.4" }
ruchei-itertools = { path = "ruchei-itertools", version = "=0.0.0-a.3" }
ruchei-route = { path = "ruchei-route", version = "0.1.9", default-features = false }
ruchei-sample.path = "internal/ruchei-sample"

atomic-waker = "1.1.2"
crossbeam-utils = "0.8.21"
futures-channel = "0.3.31"
futures-core = { version = "0.3.31", default-features = false }
futures-executor = "0.3.31"
futures-sink = "0.3.31"
futures-util = { version = "0.3.31", default-features = false }
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.5"
option-entry = "0.1.0"
pin-project = "1"
slab = "0.4.11"

[dependencies]
extend-pinned = { workspace = true, optional = true }
route-sink = { workspace = true, features = [
    "futures-util",
    "std",
], optional = true }
ruchei-callback = { workspace = true, optional = true }
ruchei-collections = { workspace = true, optional = true }
ruchei-connection = { workspace = true, optional = true }
ruchei-extend = { workspace = true, optional = true }
ruchei-extra = { workspace = true, optional = true, features = [
    "futures-core",
] }
ruchei-itertools = { workspace = true, optional = true }

futures-util = { workspace = true, features = ["sink"] }
linked_hash_set = { workspace = true, optional = true }
option-entry.workspace = true
pin-project.workspace = true

[dev-dependencies]
async-io = "2.3.2"
async-net = "2.0.0"
async-std = { version = "1.12.0", features = ["attributes"] }
async-tungstenite = { version = "0.28" }
futures-channel.workspace = true
rand = "0.8.5"
thiserror = "1"

[features]
default = ["by-key", "connection", "extend", "extra", "std"]
by-key = ["dep:linked_hash_set"]
connection = ["route-sink", "dep:ruchei-collections", "dep:ruchei-connection"]
extend = ["dep:extend-pinned", "dep:ruchei-extend"]
extra = ["dep:ruchei-extra"]
itertools = ["dep:ruchei-itertools"]
route-sink = [
    "sink",
    "dep:route-sink",
    "ruchei-extend?/route-sink",
    "ruchei-extra?/route-sink",
]
sink = [
    "futures-util/sink",
    "ruchei-extend?/sink",
    "ruchei-extra?/futures-sink",
]
std = ["futures-util/std", "ruchei-extend/std"]
unstable = ["extra", "dep:ruchei-callback", "ruchei-extend?/unstable"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
