[package]
name = "extend-pinned"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Extend but for Pin"
keywords = ["async", "extend", "no_std", "pin"]
categories = ["asynchronous", "no-std", "rust-patterns"]

[dependencies]
