[package]
name = "route-sink"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
futures-sink.workspace = true
futures-util = { version = "0.3.31", optional = true, features = [
    "sink",
], default-features = false }

[features]
futures-util = ["dep:futures-util"]
std = ["futures-util?/std"]

[package.metadata.tagit]
skip = true
