[package]
name = "route-sink"
description = "Sinks with routes"
documentation = "https://docs.rs/route-sink"
keywords = ["async", "sink"]
categories = ["asynchronous"]
version = "0.1.3"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
futures-sink.workspace = true
futures-util = { version = "0.3.31", optional = true, features = [
    "sink",
], default-features = false }

[features]
default = ["std"]
futures-util = ["dep:futures-util"]
std = ["futures-util?/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
