[package]
name = "ruchei-collections"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
slab.workspace = true

[package.metadata.tagit]
skip = true
