[package]
name = "ruchei-collections"
version = "0.0.0-a.4"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Collections to support the implementation of ruchei"
categories = ["data-structures"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
slab.workspace = true
