[package]
name = "ruchei-connection"
version = "0.0.0-a.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
futures-channel.workspace = true
futures-util.workspace = true
pin-project.workspace = true
ruchei-collections.workspace = true
