[package]
name = "ruchei-extend"
version = "0.1.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "ExtendPinned utilities for ruchei"
categories = ["asynchronous"]

[dependencies]
extend-pinned.workspace = true
route-sink = { workspace = true, optional = true }

futures-core.workspace = true
futures-sink = { workspace = true, optional = true }
pin-project.workspace = true

[features]
default = ["route-sink"]
route-sink = ["sink", "dep:route-sink"]
sink = ["dep:futures-sink"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
