[package]
name = "ruchei-extra"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
futures-core.workspace = true
futures-sink.workspace = true
pin-project.workspace = true
