[package]
name = "ruchei-extra"
description = "Stream/Sink wrapper with extra data, as used by ruchei"
documentation = "https://docs.rs/ruchei-extra"
keywords = ["streams", "async", "stream"]
categories = ["asynchronous"]
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
futures-core.workspace = true
futures-sink.workspace = true
pin-project.workspace = true
