[package]
name = "ruchei-extra"
description = "Stream/Sink wrapper with extra data, as used by ruchei"
documentation = "https://docs.rs/ruchei-extra"
keywords = ["streams", "async", "stream"]
categories = ["asynchronous"]
version = "0.1.4"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
futures-core = { workspace = true, optional = true }
futures-sink = { workspace = true, optional = true }
pin-project.workspace = true
route-sink = { workspace = true, optional = true }

[features]
futures-core = ["dep:futures-core"]
futures-sink = ["dep:futures-sink"]
route-sink = ["futures-sink", "dep:route-sink"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
