[package]
name = "ruchei-itertools"
version = "0.0.0-a.2"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "async itertools, subproject of ruchei"
categories = ["asynchronous"]

[dependencies]
futures-util.workspace = true
futures-sink = { workspace = true, optional = true }
option-entry.workspace = true
pin-project.workspace = true
route-sink = { workspace = true, optional = true }

[features]
sink = ["dep:futures-sink"]
std = []
route-sink = ["sink", "dep:route-sink"]

[dev-dependencies]
futures-executor.workspace = true
