[package]
name = "ruchei-route"
description = "Sinks with routes"
documentation = "https://docs.rs/ruchei-route"
keywords = ["async", "sink"]
categories = ["asynchronous"]
version = "0.1.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
futures-sink.workspace = true
