[package]
name = "ruchei-route"
description = "Sinks with routes"
documentation = "https://docs.rs/ruchei-route"
keywords = ["async", "sink"]
categories = ["asynchronous"]
version = "0.1.8"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
futures-core = { workspace = true, optional = true }
futures-sink.workspace = true
pin-project = { workspace = true, optional = true }

[features]
default = ["unroute"]
unroute = ["dep:futures-core", "dep:pin-project"]
