[package]
name = "ruchei-test"
version = "0.0.0-a.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
flume = "0.11.1"
futures-util.workspace = true
multimap = "0.10.1"
slab.workspace = true

[package.metadata.tagit]
skip = true
