[package]
name = "ruchei-wakelist"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
atomic-waker.workspace = true
crossbeam-utils.workspace = true

[package.metadata.tagit]
skip = true
