[package]
name = "ruchei-wakelist"
version = "0.0.0-a.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "intrusive doubly-linked lists with wake queues"

[dependencies]
atomic-waker.workspace = true
crossbeam-utils.workspace = true
